--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 import { getDb } from "../../lib/db";
 import { posts } from "../../../db/schema";
-import { eq } from "drizzle-orm";
+import { eq, and, lte } from "drizzle-orm";
 import Comments from "../../components/Comments";
 import { marked } from "marked";
 
@@ -14,7 +14,11 @@ if (!slug) {
 
 const { env } = Astro.locals.runtime;
 const db = getDb(env);
-const result = await db.select().from(posts).where(eq(posts.slug, slug)).get();
+const result = await db
+  .select()
+  .from(posts)
+  .where(and(eq(posts.slug, slug), lte(posts.publishedAt, Date.now())))
+  .get();
 
 if (!result) {
   return Astro.redirect("/404");
